<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/employee_registration_page" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/Username"
            android:width="200dp"
            android:id="@+id/newEmployeeUsername">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/email"
            android:width="200dp"
            android:id="@+id/newEmployeeEmail">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/first_name"
            android:width="200dp"
            android:id="@+id/newEmployeeFirstName">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/last_name"
            android:width="200dp"
            android:id="@+id/newEmployeeLastName">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_number"
            android:width="200dp"
            android:id="@+id/newEmployeeCreditCardNumber">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_expiry"
            android:width="200dp"
            android:id="@+id/newEmployeeCreditCardExpiry">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_cvv"
            android:width="200dp"
            android:id="@+id/newEmployeeCreditCardCVV">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/Password"
            android:width="200dp"
            android:id="@+id/newEmployeePassword">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/newEmployeeRegisterButton"
            android:text="@string/Register">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>