<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/employer_registration_page" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/Username"
            android:width="200dp"
            android:id="@+id/newEmployerUsername">
        </EditText>

        <EditText
            android:id="@+id/newEmployerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/email"
            android:width="200dp">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/first_name"
            android:width="200dp"
            android:id="@+id/newEmployerFirstName">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/last_name"
            android:width="200dp"
            android:id="@+id/newEmployerLastName">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_number"
            android:width="200dp"
            android:id="@+id/newEmployerCreditCardNumber">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_expiry"
            android:width="200dp"
            android:id="@+id/newEmployerCreditCardExpiry">
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/credit_card_cvv"
            android:width="200dp"
            android:id="@+id/newEmployerCreditCardCVV">
        </EditText>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:hint="@string/Password"
            android:width="200dp"
            android:id="@+id/newEmployerPassword">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/newEmployerRegisterButton"
            android:text="@string/Register">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>